Changes to Footer

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     }
 
     #about-me {
-       margin-top: 20px;
-       margin-left: 10px;
+        margin-top: 20px;
+        margin-left: 10px;
     }
 
-    #main-content{
+    #main-content {
         border-top: 3px solid #cccccc;
     }
 
@@ -64,7 +64,8 @@
         height: 220px;
         padding: 20px;
     }
-/* Sticky footer */
+
+    /* Sticky footer */
     .footer {
         position: fixed;
         left: 0;
@@ -132,6 +133,7 @@
 
         </div>
 
+        <!-- footer -->
         <footer class="footer">
             <span class="text-muted">Copyright</span>
         </footer>
