Fixed alignment issue with Header

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <div class="container">
         <!-- Row Justify Content -->
         <div class="row justify-content-between">
-            <div class="col-5 col-4 col-3 col-2" id="header">
-                <h1>David I Riveraperez</h1>
+            <div class="col-6" id="header">
+                <h1>David I <br>Riveraperez</h1>
             </div>
 
             <!-- Bootstrap Collapasible Navbar-->
