--- a/contact.html
+++ b/contact.html
@@ -90,12 +90,12 @@
     <div class="container">
         <!-- Row Justify Content -->
         <div class="row justify-content-between">
-            <div class="col-5 col-4 col-3 col-2" id="header">
-                <h1>David I Riveraperez</h1>
+            <div class="col-6" id="header">
+                <h1>David I <br>Riveraperez</h1>
             </div>
 
             <!-- Bootstrap Collapasible Navbar-->
-            <div class="col-5 col-4 col-3 col -2">
+            <div class="col-5 col-4 col-3 col-2">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand" href="https://getbootstrap.com/docs/4.0/components/navbar/">Navbar</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
