--- a/portfolio.html
+++ b/portfolio.html
@@ -128,8 +128,10 @@
         <div class="row" id="main-content">
 
 
-            <div class="col-6 col-sm-4">In Progress</div>
-            <div class="col-6 col-sm-4">In Progress</div>
+            <div class="col-6 col-sm-4">Wat2Eat Project <a href="https://david197116.github.io/Class-Project-1/" target="_blank">
+                <img border="0" alt="https://david197116.github.io/Class-Project-1/" src="images/Wat2Eat project.png" width="250" height="250">
+            </a></div>
+         
 
             <!-- Force next columns to break to new line at md breakpoint and up -->
             <div class="w-100 d-none d-md-block"></div>
