Updated Portfolio with latest Projects and apps

--- a/index.html
+++ b/index.html
@@ -137,16 +137,31 @@
             </div>
 
             <div class="col-lg col-md-auto col-sm-auto col-auto">
-                <p>I am 49 yrs old from Puerto Rico, married with two adult children. I retired from the military 8
-                    years ago after serving in the US Army over 20 years. I have been working in finance since then and
-                    looking for a new career change. Family is very important to me and the motivation
-                    that allows me to keep going. Football and Baseball are my favorites sports.
+                <p> I am 49 yrs old from Puerto Rico, married with two adult children. I retired from the military 8
+                    years ago after serving in the US Army over 20 years. I have been working in finance since then and looking for a new career change. Family is very important to me and the motivation that allows me to keep going. Football and Baseball are my favorites sports.
                     " Go Cowboy's, Longhorns and Rangers"</p>
-                <p>IT is a field that I have always been interested in and the reason I am taking this course. I am
-                    hoping to gain the knowledge
-                    and the essential skill set require to transition into the field as a Full Stack Web Developer.</p>
+                <p>IT is a field that I have always been interested in and the reason I am currently a Full Stack Web Developer student at the University of Texas. I am currently seeking for an opportunity to transition into the field as an independent contractor, part-time or full-time employee.</p>
             </div>
 
+        </div>
+
+        <div>
+            <section id="contact-info">
+                <h2>Connect</h2>
+                <ul>
+                    <a href="https://www.linkedin.com/in/david-ivan-rivera-perez-b6a1012a/" target="_blank">
+                        <img border="0" alt="Linkedin" src="images/Linkedin.png" width="50" height="50">
+                    </a>
+                    <a href="https://github.com/david197116" target="_blank">
+                        <img border="0" alt="Github" src="images/GitHub-Mark.png" width="50" height="50">
+                    </a>
+                    <address>
+                        Email: <a href="mailto:david.i.riveraperez@gmail.com">david.i.riveraperez@gmail.com</a>.<br>
+                        (512)695-2652<br>  
+                        </address>
+
+                </ul>
+            </section>
         </div>
 
         <!-- footer -->
