--- a/portfolio.html
+++ b/portfolio.html
@@ -128,22 +128,76 @@
         <div class="row" id="main-content">
 
 
-            <div class="col-6 col-sm-4">Wat2Eat Project <a href="https://david197116.github.io/Class-Project-1/" target="_blank">
-                <img border="0" alt="https://david197116.github.io/Class-Project-1/" src="images/Wat2Eat project.png" width="250" height="250">
+            <div class="col-6 col-sm-4"> Project 1: Wat2Eat <a href="https://david197116.github.io/Class-Project-1/"
+                    target="_blank">
+                    <img border="0" alt="https://david197116.github.io/Class-Project-1/"
+                        src="images/Wat2Eat project.png" width="250" height="250">
+                    <address>
+                        <a href="https://github.com/david197116/Class-Project-1">GitHub repository</a>
+                    </address>
+                </a></div>
+
+            <div class="col-6 col-sm-4">Project 2: areYou Smart <a href="https://glacial-oasis-54478.herokuapp.com/"
+                    target="_blank">
+                    <img border="0" alt="https://glacial-oasis-54478.herokuapp.com/"
+                    src="images/areYou Smart.png"
+                        width="250" height="250">
+                    <address>
+                        <a href="https://github.com/adoming8/project2">GitHub repository</a>
+                    </address>
+                </a></div>
+
+
+            <div class="col-6 col-sm-4">Developer Profile Generator <a href=" https://drive.google.com/file/d/1ZcFW8uqh-DfvetXUAjzLl_FOMy2S67Qr/view"
+                target="_blank">
+                <img border="0" alt=" https://drive.google.com/file/d/1ZcFW8uqh-DfvetXUAjzLl_FOMy2S67Qr/view"
+                src="images/profilegenerator.png"
+                    width="250" height="250">
+
+                <address>
+                    <a href=" https://github.com/david197116/Unit-09-Node.js-and-ES6-Homework-Developer-Profile-Generator">GitHub repository</a>
+                </address>
             </a></div>
-         
 
             <!-- Force next columns to break to new line at md breakpoint and up -->
             <div class="w-100 d-none d-md-block"></div>
 
-            <div class="col-6 col-sm-4">Devour that Burger <a href=" https://appsuperburger.herokuapp.com/" target="_blank">
-                <img border="0" alt=" https://appsuperburger.herokuapp.com/" src="images/Devour  the Burger.png" width="250" height="250">
-            </a></div>
-            <div class="col-6 col-sm-4">In Progress</div>
+            <div class="col-6 col-sm-4">Devour that Burger <a href=" https://appsuperburger.herokuapp.com/"
+                    target="_blank">
+                    <img border="0" alt=" https://appsuperburger.herokuapp.com/" src="images/Devour  the Burger.png"
+                        width="250" height="250">
 
+                    <address>
+                        <a href="https://github.com/david197116/burger">GitHub repository</a>
+                    </address>
+                </a></div>
+
+            <div class="col-6 col-sm-4">Daily Planner <a href="https://david197116.github.io/Unit-05-Third-Party-APIs-Homework-Day-Planner/"
+                target="_blank">
+                <img border="0" alt="https://david197116.github.io/Unit-05-Third-Party-APIs-Homework-Day-Planner/"
+                src="images/Workdayschedule.png"
+                    width="250" height="250">
+
+                <address>
+                    <a href="https://github.com/david197116/Unit-05-Third-Party-APIs-Homework-Day-Planner">GitHub repository</a>
+                </address>
+            </a></div>
+
+            <div class="col-6 col-sm-4">Coding Quiz Challenge <a href="https://david197116.github.io/Unit-04-Web-APIs-Homework-Code-Quiz/"
+                target="_blank">
+                <img border="0" alt="https://david197116.github.io/Unit-04-Web-APIs-Homework-Code-Quiz/"
+                src="images/codequiz.png"
+                    width="250" height="250">
+
+                <address>
+                    <a href=" https://github.com/david197116/Unit-04-Web-APIs-Homework-Code-Quiz">GitHub repository</a>
+                </address>
+            </a></div>
+
+            </div>
+         <!-- Force next columns to break to new line at md breakpoint and up -->
             <div class="w-100 d-none d-md-block"></div>
 
-            <div class="col-6 col-sm-4">In Progress</div>
             <div class="col-6 col-sm-4">In Progress</div>
 
 
